--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "7.1.2-activity",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,7 +10,7 @@
   "author": "",
   "license": "",
   "devDependencies": {
-    "webpack": "^5.89.0",
+    "webpack": "^5.90.3",
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
